# jsonsearchengine

./: LICENSE  README.md  json_search.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/jsonsearchengine/: __init__.py  jsonsearchengine.py
tests/: test.py
