[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "JsonSearchEngine"
version = "1.0.0"
description = "A Python class for searching within JSON data structures"
readme = "README.md"
requires-python = "^3"
license = {file = "LICENSE.txt"}
keywords = ["json", "search"]
authors = [
  {name = "Omar Khattara", email = "omar1developer@gmail.com" }
]



classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9'
]


dependencies = []




[project.urls]
"Homepage" = "https://github.com/omar1developer/jsonsearchengine"
Issues = "https://github.com/omar1developer/jsonsearchengine/blob/main/LICENSE"
